// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/metadata Should handle failed parsing of sourceUrls for GitLab 1`] = `
{
  "releases": [
    {
      "releaseTimestamp": "2020-02-14T13:12:00.000Z",
      "version": "5.7.0",
    },
    {
      "releaseTimestamp": "2020-02-14T10:04:00.000Z",
      "version": "5.6.1",
    },
  ],
  "sourceUrl": "https://gitlab-nope",
}
`;

exports[`modules/datasource/metadata Should handle failed parsing of sourceUrls for other 1`] = `
{
  "releases": [
    {
      "releaseTimestamp": "2020-02-14T13:12:00.000Z",
      "version": "5.7.0",
    },
    {
      "releaseTimestamp": "2020-02-14T10:04:00.000Z",
      "version": "5.6.1",
    },
  ],
  "sourceUrl": "https://nope-nope-nope",
}
`;

exports[`modules/datasource/metadata Should handle manualChangelogUrls 1`] = `
{
  "changelogUrl": "https://github.com/django/django/tree/master/docs/releases",
  "releases": [
    {
      "releaseTimestamp": "2018-07-13T10:14:17.000Z",
      "version": "2.0.0",
    },
    {
      "releaseTimestamp": "2017-10-24T10:09:16.000Z",
      "version": "2.0.0.dev1",
    },
    {
      "releaseTimestamp": "2019-01-20T19:59:28.000Z",
      "version": "2.1.0",
    },
    {
      "releaseTimestamp": "2019-07-16T18:29:00.000Z",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/django/django",
}
`;

exports[`modules/datasource/metadata Should handle manualSourceUrls 1`] = `
{
  "releases": [
    {
      "releaseTimestamp": "2018-07-13T10:14:17.000Z",
      "version": "2.0.0",
    },
    {
      "releaseTimestamp": "2017-10-24T10:09:16.000Z",
      "version": "2.0.0.dev1",
    },
    {
      "releaseTimestamp": "2019-01-20T19:59:28.000Z",
      "version": "2.1.0",
    },
    {
      "releaseTimestamp": "2019-07-16T18:29:00.000Z",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/mkdocs/mkdocs",
}
`;

exports[`modules/datasource/metadata Should handle non-url 1`] = `
{
  "releases": [
    {
      "releaseTimestamp": "2020-02-14T13:12:00.000Z",
      "version": "5.7.0",
    },
    {
      "releaseTimestamp": "2020-02-14T10:04:00.000Z",
      "version": "5.6.1",
    },
  ],
}
`;

exports[`modules/datasource/metadata Should handle parsing of sourceUrls correctly 1`] = `
{
  "releases": [
    {
      "releaseTimestamp": "2018-07-13T10:14:17.000Z",
      "version": "2.0.0",
    },
    {
      "releaseTimestamp": "2017-10-24T10:09:16.000Z",
      "version": "2.0.0.dev1",
    },
    {
      "releaseTimestamp": "2019-01-20T19:59:28.000Z",
      "version": "2.1.0",
    },
    {
      "releaseTimestamp": "2019-07-16T18:29:00.000Z",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/carltongibson/django-filter",
}
`;

exports[`modules/datasource/metadata Should handle parsing of sourceUrls correctly for GitLab also 1`] = `
{
  "releases": [
    {
      "releaseTimestamp": "2020-02-14T13:12:00.000Z",
      "version": "5.7.0",
    },
    {
      "releaseTimestamp": "2020-02-14T10:04:00.000Z",
      "version": "5.6.1",
    },
  ],
  "sourceUrl": "https://gitlab.com/meno/dropzone",
}
`;

exports[`modules/datasource/metadata Should massage github sourceUrls 1`] = `
{
  "releases": [
    {
      "releaseTimestamp": "2018-07-13T10:14:17.000Z",
      "version": "2.0.0",
    },
    {
      "releaseTimestamp": "2017-10-24T10:09:16.000Z",
      "version": "2.0.0.dev1",
    },
    {
      "releaseTimestamp": "2019-01-20T19:59:28.000Z",
      "version": "2.1.0",
    },
    {
      "releaseTimestamp": "2019-07-16T18:29:00.000Z",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/some/repo",
}
`;

exports[`modules/datasource/metadata Should not overwrite any existing sourceDirectory 1`] = `
{
  "releases": [],
  "sourceDirectory": "packages/foo",
  "sourceUrl": "https://github.com/neutrinojs/neutrino",
}
`;

exports[`modules/datasource/metadata Should not split a sourceDirectory when one cannot be detected https://github.com/bitnami 1`] = `
{
  "releases": [],
  "sourceUrl": "https://github.com/bitnami",
}
`;

exports[`modules/datasource/metadata Should not split a sourceDirectory when one cannot be detected https://github.com/bitnami/charts 1`] = `
{
  "releases": [],
  "sourceUrl": "https://github.com/bitnami/charts",
}
`;

exports[`modules/datasource/metadata Should not split a sourceDirectory when one cannot be detected https://github.example.com/org/repo 1`] = `
{
  "releases": [],
  "sourceUrl": "https://github.example.com/org/repo",
}
`;

exports[`modules/datasource/metadata Should not split a sourceDirectory when one cannot be detected https://gitlab.com/group 1`] = `
{
  "releases": [],
  "sourceUrl": "https://gitlab.com/group",
}
`;

exports[`modules/datasource/metadata Should not split a sourceDirectory when one cannot be detected https://gitlab.com/group/repo 1`] = `
{
  "releases": [],
  "sourceUrl": "https://gitlab.com/group/repo",
}
`;

exports[`modules/datasource/metadata Should not split a sourceDirectory when one cannot be detected https://gitlab.com/group/sub-group/repo 1`] = `
{
  "releases": [],
  "sourceUrl": "https://gitlab.com/group/sub-group/repo",
}
`;

exports[`modules/datasource/metadata Should not split a sourceDirectory when one cannot be detected https://unknown-platform.com/some/repo/files/foo/bar 1`] = `
{
  "releases": [],
  "sourceUrl": "https://unknown-platform.com/some/repo/files/foo/bar",
}
`;

exports[`modules/datasource/metadata Should split the sourceDirectory out of sourceUrl for known platforms: https://github.com/bitnami/charts/tree/master/bitnami/kube-prometheus -> (https://github.com/bitnami/charts, bitnami/kube-prometheus) 1`] = `
{
  "releases": [],
  "sourceDirectory": "bitnami/kube-prometheus",
  "sourceUrl": "https://github.com/bitnami/charts",
}
`;

exports[`modules/datasource/metadata Should split the sourceDirectory out of sourceUrl for known platforms: https://github.example.com/org/repo/tree/main/foo/bar/baz -> (https://github.example.com/org/repo, foo/bar/baz) 1`] = `
{
  "releases": [],
  "sourceDirectory": "foo/bar/baz",
  "sourceUrl": "https://github.example.com/org/repo",
}
`;

exports[`modules/datasource/metadata Should split the sourceDirectory out of sourceUrl for known platforms: https://gitlab.com/group/sub-group/repo/-/tree/main/some/path -> (https://gitlab.com/group/sub-group/repo, some/path) 1`] = `
{
  "releases": [],
  "sourceDirectory": "some/path",
  "sourceUrl": "https://gitlab.com/group/sub-group/repo",
}
`;

exports[`modules/datasource/metadata Should split the sourceDirectory out of sourceUrl for known platforms: https://gitlab.com/group/sub-group/repo/tree/main/some/path -> (https://gitlab.com/group/sub-group/repo, some/path) 1`] = `
{
  "releases": [],
  "sourceDirectory": "some/path",
  "sourceUrl": "https://gitlab.com/group/sub-group/repo",
}
`;
